[gd_scene load_steps=2 format=2]

[ext_resource path="res://StartMenu.gd" type="Script" id=1]

[node name="StartMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 918.0
margin_top = 506.0
margin_right = 1001.0
margin_bottom = 574.0

[node name="StartGame" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 83.0
margin_bottom = 20.0
text = "Start Game"

[node name="Options" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 83.0
margin_bottom = 44.0
text = "Options"

[node name="QuitGame" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 83.0
margin_bottom = 68.0
text = "Quit Game"

[connection signal="pressed" from="CenterContainer/VBoxContainer/StartGame" to="." method="_on_StartGame_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitGame" to="." method="_on_QuitGame_pressed"]
